--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.Hero {
+    background: linear-gradient(to right, rgba(255, 255, 255, 0.791), rgba(255, 255, 255, 0.072));
+}
+
+.Hero2 {
+    background: rgba(255, 255, 255, 0.546);
+}
+
